@@ -85,101 +85,66 @@ varying vec4      var_PrimaryLightDir;
 #define EPSILON 0.00000001
 
 #if defined(USE_PARALLAXMAP)
-vec4 generateBumpyNormal( vec2 fragCoord )
-{// Generates an extra bumpy normal map...
-	vec2 tex_offset = vec2(1.0 / var_Dimensions.x, 1.0 / var_Dimensions.y);
-	vec2 uv = fragCoord;
-	//uv.y=1.0-uv.y;
-	
-	float x=1.;
-	float y=1.;
-	
-	float M =abs(texture2D(u_DiffuseMap, uv + vec2(0., 0.)*tex_offset).r); 
-	float L =abs(texture2D(u_DiffuseMap, uv + vec2(x, 0.)*tex_offset).r);
-	float R =abs(texture2D(u_DiffuseMap, uv + vec2(-x, 0.)*tex_offset).r);	
-	float U =abs(texture2D(u_DiffuseMap, uv + vec2(0., y)*tex_offset).r);
-	float D =abs(texture2D(u_DiffuseMap, uv + vec2(0., -y)*tex_offset).r);
-	float X = ((R-M)+(M-L))*.5;
-	float Y = ((D-M)+(M-U))*.5;
-	
-	float strength =.01;
-	vec4 N = vec4(normalize(vec3(X, Y, strength)), 1.0);
-//	vec4 N = vec4(normalize(vec3(X, Y, .01))-.5, 1.0);
-
-	vec4 col = vec4(N.xyz * 0.5 + 0.5,1.);
-	return col;
-}
-
-float SampleDepth(sampler2D normalMap, vec2 t)
-{// Provides enhanced parallax depths without stupid distortions... Also provides a nice backup specular map...
-	vec3 color = texture2D(u_DiffuseMap, t).rgb;
-
-#define const_1 ( 16.0 / 255.0)
-#define const_2 (255.0 / 219.0)
-	vec3 color2 = ((color - const_1) * const_2);
-#define const_3 ( 125.0 / 255.0)
-#define const_4 (255.0 / 115.0)
-	color = ((color - const_3) * const_4);
-
-	color = clamp(color * color * (color * 5.0), 0.0, 1.0); // 1st half "color * color" darkens, 2nd half "* color * 5.0" increases the mids...
-
-	vec3 orig_color = color + color2;
-
-	orig_color = clamp(orig_color * 2.5, 0.0, 1.0); // Lightens the new mixed version...
-
-	float combined_color2 = orig_color.r + orig_color.g + orig_color.b;
-	combined_color2 /= 4.0; // Darkens the whole thing a litttle...
-
-	// Returns inverse of the height. Result is mostly around 1.0 (so we don't stand on a surface far below us), with deep dark areas (cracks, edges, etc)...
-	float height = clamp(1.0 - combined_color2, 0.0, 1.0);
-	return height;
-
-	// Mix it with an extra-bumpy normal map... (UQ1: decided not worth the fps loss)
-	float norm = generateBumpyNormal( t ).r;
-	// I don't want this much bumpiness (and this is to be used as a multipier), so move the whole thing closer to 1.0...
-	norm *= 0.5;
-	norm += 0.5;
-	return (height + (norm * height)) / 2.0;
-}
+  #if defined(USE_PARALLAXMAP)
+	float SampleDepth(sampler2D normalMap, vec2 t)
+	{
+		#if defined(SWIZZLE_NORMALMAP)
+			return 1.0 - texture2D(normalMap, t).r;
+		#else
+			return 1.0 - texture2D(normalMap, t).a;
+		#endif
+	}
+  #endif //USE_PARALLAXMAP
 
 float RayIntersectDisplaceMap(vec2 dp, vec2 ds, sampler2D normalMap)
 {
-	float MAX_SIZE = var_Local1.x / 3.0;//1.25;//1.5;//1.0;
-	if (MAX_SIZE > 1.75) MAX_SIZE = 1.75;
-	if (MAX_SIZE < 1.0) MAX_SIZE = 1.0;
 	const int linearSearchSteps = 16;
 	const int binarySearchSteps = 6;
 
 	// current size of search window
-	float size = MAX_SIZE / float(linearSearchSteps);
+	float size = 1.0 / float(linearSearchSteps);
 
 	// current depth position
 	float depth = 0.0;
 
 	// best match found (starts with last position 1.0)
-	float bestDepth = MAX_SIZE;
+	float bestDepth = 1.0;
+
+	// texture depth at best depth
+	float texDepth = 0.0;
+
+	float prevT = SampleDepth(normalMap, dp);
+	float prevTexDepth = prevT;
 
 	// search front to back for first point inside object
 	for(int i = 0; i < linearSearchSteps - 1; ++i)
 	{
 		depth += size;
 		
-		float t = SampleDepth(normalMap, dp + ds * depth) * MAX_SIZE;
+		float t = SampleDepth(normalMap, dp + ds * depth);
 		
-		//if(bestDepth > 0.996)		// if no depth found yet
-		if(bestDepth > MAX_SIZE - (MAX_SIZE / linearSearchSteps))		// if no depth found yet
+		if(bestDepth > 0.996)		// if no depth found yet
 			if(depth >= t)
+			{
 				bestDepth = depth;	// store best depth
+				texDepth = t;
+				prevTexDepth = prevT;
+			}
+		prevT = t;
 	}
 
 	depth = bestDepth;
-	
+
+#if !defined (USE_RELIEFMAP)
+	float div = 1.0 / (1.0 + (prevTexDepth - texDepth) * float(linearSearchSteps));
+	bestDepth -= (depth - size - prevTexDepth) * div;
+#else
 	// recurse around first point (depth) for closest match
 	for(int i = 0; i < binarySearchSteps; ++i)
 	{
 		size *= 0.5;
 
-		float t = SampleDepth(normalMap, dp + ds * depth) * MAX_SIZE;
+		float t = SampleDepth(normalMap, dp + ds * depth);
 		
 		if(depth >= t)
 		{
@@ -189,8 +154,9 @@ float RayIntersectDisplaceMap(vec2 dp, vec2 ds, sampler2D normalMap)
 
 		depth += size;
 	}
+#endif
 
-	return bestDepth * var_Local1.x;
+	return bestDepth;
 }
 
 float LightRay(vec2 dp, vec2 ds, sampler2D normalMap)
@@ -240,25 +206,43 @@ vec2 GetParallaxOffset(in vec2 texCoords, in vec3 E, in mat3 tangentToWorld )
 #endif
 }
 
-float CalcVisibility( in float NL, in float NE, in float roughness )
+float spec_D( float NH, float roughness)
 {
-	float alphaSq = roughness*roughness;
-
-	float lambdaE = NL * sqrt((-NE * alphaSq + NE) * NE + alphaSq);
-	float lambdaL = NE * sqrt((-NL * alphaSq + NL) * NL + alphaSq);
-
-	return 0.5 / (lambdaE + lambdaL);
+	// normal distribution
+	// from http://blog.selfshadow.com/publications/s2013-shading-course/karis/s2013_pbs_epic_notes_v2.pdf
+	float alpha = roughness * roughness;
+	float quotient = alpha / max(1e-8,(NH*NH*(alpha*alpha-1.0)+1.0));
+	return (quotient * quotient) / M_PI;
 }
 
-// http://www.frostbite.com/2014/11/moving-frostbite-to-pbr/
-vec3 CalcSpecular( in vec3 specular, in float NH, in float NL, in float NE, in float LH, in float roughness )
+vec3 spec_F( float EH, vec3 F0)
 {
-	// from http://community.arm.com/servlet/JiveServlet/download/96891546-19496/siggraph2015-mmg-renaldas-slides.pdf
-	float rr = roughness*roughness;
-	float rrrr = rr*rr;
-	float d = (NH * NH) * (rrrr - 1.0) + 1.0;
-	float v = CalcVisibility(NL, NE, roughness);
-	return specular * (rrrr / (4.0 * d * d * v));
+	// Fresnel
+	// from http://blog.selfshadow.com/publications/s2013-shading-course/karis/s2013_pbs_epic_notes_v2.pdf
+	float pow2 = pow(2.0, (-5.55473*EH - 6.98316) * EH);
+	return F0 + (vec3(1.0) - F0) * pow2;
+}
+
+float G1( float NV, float k)
+{
+	return NV / (NV*(1.0-k) +  k);
+}
+
+float spec_G(float NL, float NE, float roughness )
+{
+	// GXX Schlick
+	// from http://blog.selfshadow.com/publications/s2013-shading-course/karis/s2013_pbs_epic_notes_v2.pdf
+	float k = max(((roughness + 1.0) * (roughness + 1.0)) / 8.0, 1e-5);
+	return G1(NL,k)*G1(NE,k);
+}
+
+vec3 CalcSpecular( vec3 specular, float NH, float NL, float NE, float EH, float roughness )
+{
+	float distrib = spec_D(NH,roughness);
+	vec3 fresnel = spec_F(EH,specular);
+	float vis = spec_G(NL, NE, roughness);
+	float denominator = max((4.0 * max(NE,0.0) * max(NL,0.0)),0.001);
+	return (distrib * fresnel * vis) / denominator;
 }
 
 
@@ -376,9 +360,18 @@ void main()
 	
 	float sqrLightDist = dot(L, L);
 	L /= sqrt(sqrLightDist);
+	
+	float factor = 1.0;
+	#if defined(USE_PBR)
+		// smooth out distance attenuation for dynamic lights
+		factor = sqrLightDist * (1.0 / var_LightDir.w);
+		factor = clamp(1.0 - (factor*factor), 0.0, 1.0);
+		factor *= factor;
+	#endif
 
 	#if defined(USE_LIGHT_VECTOR)
 		attenuation  = CalcLightAttenuation(float(var_LightDir.w > 0.0), var_LightDir.w / sqrLightDist);
+		attenuation *= factor;
 	#else
 		attenuation  = 1.0;
 	#endif
@@ -487,8 +480,7 @@ void main()
 		// diffuse rgb is base color
 		// specular red is gloss
 		// specular green is metallicness
-		float roughness = specular.r;
-		//float roughness = max(1.0 - specular.a, 0.02);
+		float gloss		= specular.r;
 		float metal		= specular.g;
 		specular.rgb	= metal * diffuse.rgb + vec3(0.04 - 0.04 * metal);
 		diffuse.rgb    *= 1.0 - metal;
@@ -496,11 +488,13 @@ void main()
 		// diffuse rgb is diffuse
 		// specular rgb is specular reflectance at normal incidence
 		// specular alpha is gloss
-		float roughness = max(specular.a, 0.04);
+		float gloss = 1.0 - min(specular.a, 0.96);
 
 		// adjust diffuse by specular reflectance, to maintain energy conservation
-		diffuse.rgb *= vec3(1.0) - specular.rgb;
+		diffuse.rgb -= specular.rgb * (1.0 - u_EnableTextures.z);
 	#endif
+
+	float roughness = max(gloss, 0.04);
 	
 	reflectance = CalcDiffuse(diffuse.rgb, NH, EH, roughness);
 	
@@ -511,15 +505,21 @@ void main()
 		float LH = clamp(dot(L, H), 0.0, 1.0);
 		NH = clamp(dot(N, H), 0.0, 1.0);
 
-		reflectance += CalcSpecular(specular.rgb, NH, NL, NE, LH, roughness);
+		#if defined(r_deluxeSpecular)
+			#if defined(USE_LIGHT_VECTOR)
+				reflectance += CalcSpecular(specular.rgb, NH, NL, NE, EH, roughness) * r_deluxeSpecular;
+			#else
+				reflectance += CalcSpecular(specular.rgb, NH, NL, NE, EH, pow(roughness, r_deluxeSpecular));
+			#endif
+		#endif
 	#endif
   
 	gl_FragColor.rgb = lightColor * reflectance * (attenuation * NL);
 	gl_FragColor.rgb += ambientColor * diffuse.rgb;
 	
 	#if defined(USE_CUBEMAP)
-		NE = clamp(dot(N, E), 0.0, 1.0);
-		vec3 EnvBRDF = texture(u_EnvBrdfMap, vec2(roughness, NE)).rgb;
+		NE = abs(dot(N, E)) + 1e-5;
+		vec3 EnvBRDF = texture(u_EnvBrdfMap, vec2(1.0 - roughness, NE)).rgb;
 
 		vec3 R = reflect(E, N);
 
@@ -559,13 +559,13 @@ void main()
 		//sqrLightDist = dot(L2, L2);
 		//L2 /= sqrt(sqrLightDist);
 
+		H2  = normalize(L2 + E);
 		NL2 = clamp(dot(N, L2), 0.0, 1.0);
-		H2 = normalize(L2 + E);
-		EH2 = clamp(dot(E, H2), 0.0, 1.0);
-		L2H2 = clamp(dot(L2, H2), 0.0, 1.0);
-		NH2 = clamp(dot(N, H2), 0.0, 1.0);
-
-		reflectance = CalcSpecular(specular.rgb, NH2, NL2, NE, L2H2, roughness);
+		NL2 = max(1e-8, abs(NL2) );
+		EH2 = max(1e-8, dot(E, H2));
+		NH2 = max(1e-8, dot(N, H2));
+		
+		reflectance = CalcSpecular(specular.rgb, NH2, NL2, NE, EH2, roughness);
 
 		// bit of a hack, with modulated shadowmaps, ignore diffuse
 		#if !defined(SHADOWMAP_MODULATE)
